(lang dune 3.21)

(name fvae)

(using menhir 2.1)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name fvae)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml alcotest menhir)
 (tags
  ("add topics" "to describe" your project)))
